service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo-ok
  name: echo-ok-service
spec:
  ports:
  - port: 1323
    targetPort: 1323
  selector:
    app: echo-ok-pod
  type: ClusterIP
